--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,10 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  scroll-behavior: smooth;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
