--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,8 @@
   $secondary-color: rgba(87, 204, 153, 1) ;  // kolor pomocniczy
   $button-border-color: rgba(188, 71, 73, 1) ; // obramowanie przycisków i articles
   $button-color: rgba(128, 237, 153,1); // button
+  $click-color: rgba(56, 102, 65, 1); //#386641
+  $hover-color:rgba(56, 99, 65, 1);
 
   // font
 
