--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,49 +1,71 @@
 @use "./variables.scss" as *;
 
+
 // navbar
 .navbar__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 80%;
-  padding: 2rem 12% 2rem 12%;
-  background-color: $background-color;
-  z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 80%;
+    padding: 2rem 12% 2rem 12%;
+    background-color: $background-color;
+    z-index: 5;
 }
 
 .navbar__container a {
-  text-decoration: none; /* Usunięcie podkreślenia linków */
+    text-decoration: none;
+    text-shadow: 3rem;
 }
 
 .navbar__logo {
-  font-size: 3rem;
-  color: $secondary-color;
-  font-weight: 800;
-  cursor: pointer;
-  transition: 0.3s ease-in-out;
-}
+    font-size: 3rem;
+    color: $secondary-color;
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    display: inline-flex; /* zmienione z flex */
+    align-items: center; /* dodane dla wyrównania elementów w logo, jeśli to konieczne */
+  }
+  
 
 .navbar__logo:hover {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .navbar__logo span {
-  text-shadow: 0 0 20px $primary-color;
+    text-shadow: 0 0 20px $primary-color;
 }
 
-.navbar__container-list {
-  display: flex;
-  list-style: none; /* Usunięcie punktów listy */
-  margin-left: 3rem;
-}
+.navbar__container-list{
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+    margin-left: 3rem;
 
-.navbar__container-list li {
-  margin-left: 3rem;
+}
+.navbar__container-list li{
+    display: inline;
+    list-style: none;
+    margin-left: 3rem;
 }
 
 .navbar__container-list a {
-  text-decoration: none; /* Usunięcie podkreślenia linków */
+    
+    color: $click-color;
+    font-weight: 400;
+    cursor: pointer;
 }
+
+.navbar__container-list:hover{
+    display: inline;
+    //font-weight: 800;
+    transform: scale(1.02);
+    
+    color: $hover-color;
+    text-decoration: none ;
+}
+
+
