--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -78,49 +78,56 @@ body {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-// RWD navigation
 
-@media (max-width: 768px) {
-    .navbar__container {
-        width: 100%;
-        padding: 1rem 5%;
-    }
-    .navbar__logo {
-        font-size: 2rem;
-    }
-    .navbar__container-list {
-        margin-left: 1rem;
-        flex-direction: column;
-        align-items: center;
-    }
-    .navbar__container-list li {
-        font-size: 1rem;
-        margin-left: 0;
-        margin-bottom: 10px;
-    }
-}
 
 
 //Home page
 
-section {
-    min-height: 100vh;
-    padding: 10rem 12% 10rem;
-    background-color: $background-color;
 
+
+.home__container {
+    display: flex;
+    flex-direction: row;
+  
 }
-.home {
-   
-    &:content{
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 15rem;
-    }
-
-
-
+.home__content{
+    background-color: yellow;
+    width: 50%;
+    
 }
+
+.home__image{
+    border-radius: 50%;
+    background-color: red;
+    height: auto; /* Zapewnia proporcje */
+    display: block;
+    margin: 0 auto;
+    width: 50%;
+    position: relative;
+    z-index: 1;    
+    box-shadow: 0 0 10px $click-color;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.home__image:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 20px $hover-color;
+}
+
+.home__image img{
+    position: relative;
+    z-index: 2;
+    transition: 0.3s ease-in-out;
+    opacity: 0.5;
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+
 
