--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 
 
 
+
 body {
         background-color: $background-color;
 }
@@ -63,7 +64,7 @@ body {
 }
 
 .navbar__container-list a {
-   color: $click-color;
+   color: $secondary-color;
    cursor: pointer;
    text-shadow: 1px 1px 3px rgba(138, 43, 226, 0.2);
    transition: 0.3s ease-in-out;
@@ -81,53 +82,101 @@ body {
 
 
 
-//Home page
-
-
+// Home page   Home page   Home page   Home page   Home page 
 
 .home__container {
+    min-height: 100vh;
+    padding: 3rem 12% 10rem;
     display: flex;
     flex-direction: row;
-  
-}
+    margin-top: 3em;
+    }
 
 .home__content{
     background-color: yellow;
     width: 50%;
+    //padding: 1rem 2rem 2;
+
+    &-h1{
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 3rem;
+        text-align: center;
+        padding: 5rem;
+        font-size: 4rem;
+    }
+
+    &-animation {
+        font-size: 2rem;
+        font-weight: 600;
+        margin-left: 1rem;
+        font-size: clamp(3rem, 5vw, 3rem);
+    }
+
+    & p {
+       margin: 30px;
+
+    }
+
+    &-socjalicon a{
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        padding: 30px;
+        margin-bottom: 30px;
+    }
     
 }
+
+a img {
+    width: 40px; /* Zmienna wielkość ikony */
+    height: auto;
+    transition: 0.3s ease-in-out;
+  }
+  
+  a:hover img {
+    transform: scale(1.1);
+  }
+
 
 .home__image{
-    border-radius: 50%;
+    position: relative; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: red;
-    height: auto; /* Zapewnia proporcje */
-    display: block;
+    height: auto;  
+    width: 30%;  
     margin: 0 auto;
     width: 50%;
-    position: relative;
-    z-index: 1;    
-    box-shadow: 0 0 10px $click-color;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
-}
-
-.home__image:hover{
-    transform: scale(1.1);
-    box-shadow: 0 0 20px $hover-color;
-}
-
-.home__image img{
-    position: relative;
     z-index: 2;
-    transition: 0.3s ease-in-out;
-    opacity: 0.5;
     cursor: pointer;
-    width: 100px;
-    height: 100px;
     
-    border-radius: 50%;
-    object-fit: cover;
+
+
+ & img {
+
+    width: 60%; /* Niech obraz nie przekracza diva */
+    max-height:  60%; /* Niech obraz nie przekracza diva */
+    aspect-ratio: 1/1;
+    object-fit: cover;    
+    
+    border-radius: 50%; /* Zaokrąglony */
+    
+    transition: 0.3s ease-in-out;
+    box-shadow: 0px 0px 20px 10px black;
+   
+
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 30px $hover-color;
+            opacity: 1;
+        }
+    }
 }
+
+
 
 
 
