work wit style color and shadow

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@
   $button-color: rgba(128, 237, 153,1); // button
   $click-color: rgba(56, 102, 65, 1); //#386641
   $hover-color:rgba(56, 99, 65, 1);
+  $shadow-color: blueviolet;
 
   // font
 
