--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@ body {
     align-items: center;
     justify-content: space-between;
     position: sticky;
+    opacity: 0.6;
     top: 0;
     left: 0;
     width: 80%;
@@ -35,14 +36,14 @@ body {
     display: inline-flex; /* zmienione z flex */
     align-items: center; /* dodane dla wyrównania elementów w logo, jeśli to konieczne */
     gap: 15px;
-    text-shadow: 0 0 5px black;
+    text-shadow: 0 0 5px $shadow-color;
     
 }
 
 .navbar__logo:hover {
     transform: scale(1.05);
     letter-spacing: 2px;
-    text-shadow: 0 0 6px blueviolet;
+    text-shadow: 0 0 6px $shadow-color;
 }
 
 
@@ -66,7 +67,7 @@ body {
 .navbar__container-list a {
    color: $secondary-color;
    cursor: pointer;
-   text-shadow: 1px 1px 3px rgba(138, 43, 226, 0.2);
+   text-shadow: 1px 1px 3px $shadow-color;
    transition: 0.3s ease-in-out;
 }
 
@@ -82,28 +83,38 @@ body {
 
 
 
+
 // Home page   Home page   Home page   Home page   Home page 
 
 .home__container {
     min-height: 100vh;
-    padding: 3rem 12% 10rem;
+    padding: 10% 5%;
     display: flex;
     flex-direction: row;
-    margin-top: 3em;
+    margin: 3rem 3rem 1rem 1rem;
     }
 
 .home__content{
     background-color: yellow;
     width: 50%;
-    //padding: 1rem 2rem 2;
+    padding: 3rem 3rem 3rem 3rem;
+    color: $secondary-color;
+    
 
-    &-h1{
-        font-size: 12px;
+    &-h1 {
         font-weight: 700;
         line-height: 3rem;
         text-align: center;
         padding: 5rem;
         font-size: 4rem;
+        text-shadow: 2px 2px 3px rgba(255, 0, 0, 0.3); /* Poprawiony text-shadow */
+
+        &:hover {
+            transform: scale(1.02);
+            text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3); /* Dodany box-shadow */
+            transition: box-shadow 0.3s ease-in-out;
+        }
+
     }
 
     &-animation {
@@ -115,6 +126,7 @@ body {
 
     & p {
        margin: 30px;
+       font-size: 1.2rem;
 
     }
 
@@ -125,6 +137,8 @@ body {
         align-items: center;
         padding: 30px;
         margin-bottom: 30px;
+        color: $secondary-color;
+        fill: $secondary-color;
     }
     
 }
@@ -136,7 +150,12 @@ a img {
   }
   
   a:hover img {
+    box-shadow: 0 0 25px $secondary-color,
+                0 0 50px $hover-color,
+                0 0 75px $hover-color;
     transform: scale(1.1);
+    
+    
   }
 
 
