--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,198 +1,9 @@
-@use "./variables.scss" as *;
-
-
-
+@use "./variables" as *;
+@use "./section/home.scss" as *;
+@use "./section/navbar.scss" as *;
 
 body {
         background-color: $background-color;
-}
-// navbar
-.navbar__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    opacity: 0.6;
-    top: 0;
-    left: 0;
-    width: 80%;
-    height: 10vh;
-    padding: 2rem 12% 2rem 12%;
-    background-color: $background-color;
-    z-index: 5;
-    font-weight: 800;
-}
-
-.navbar__container a {
-    text-decoration: none;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-.navbar__logo {
-    font-size: 3rem;
-    color: $secondary-color;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
-    display: inline-flex; /* zmienione z flex */
-    align-items: center; /* dodane dla wyrównania elementów w logo, jeśli to konieczne */
-    gap: 15px;
-    text-shadow: 0 0 5px $shadow-color;
-    
-}
-
-.navbar__logo:hover {
-    transform: scale(1.05);
-    letter-spacing: 2px;
-    text-shadow: 0 0 6px $shadow-color;
-}
-
-
-
-.navbar__container-list{
-    display: flex;
-    text-decoration: none;
-    list-style: none;
-    margin-left: 3rem;
-
-}
-.navbar__container-list li{
-    width: 100px;
-    display: inline;
-    list-style: none;
-    margin-left: 3rem;
-    font-size: 1.2rem;
-    
-}
-
-.navbar__container-list a {
-   color: $secondary-color;
-   cursor: pointer;
-   text-shadow: 1px 1px 3px $shadow-color;
-   transition: 0.3s ease-in-out;
-}
-
-.navbar__container-list a:hover{
-    display: inline;
-    text-shadow: 2px;
-    transform: scale(1.02);
-    color: $hover-color;
-    text-decoration: none ;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-
-
-
-
-// Home page   Home page   Home page   Home page   Home page 
-
-.home__container {
-    min-height: 100vh;
-    padding: 10% 5%;
-    display: flex;
-    flex-direction: row;
-    margin: 3rem 3rem 1rem 1rem;
-    }
-
-.home__content{
-    background-color: yellow;
-    width: 50%;
-    padding: 3rem 3rem 3rem 3rem;
-    color: $secondary-color;
-    
-
-    &-h1 {
-        font-weight: 700;
-        line-height: 3rem;
-        text-align: center;
-        padding: 5rem;
-        font-size: 4rem;
-        text-shadow: 2px 2px 3px rgba(255, 0, 0, 0.3); /* Poprawiony text-shadow */
-
-        &:hover {
-            transform: scale(1.02);
-            text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3); /* Dodany box-shadow */
-            transition: box-shadow 0.3s ease-in-out;
-        }
-
-    }
-
-    &-animation {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-left: 1rem;
-        font-size: clamp(3rem, 5vw, 3rem);
-    }
-
-    & p {
-       margin: 30px;
-       font-size: 1.2rem;
-
-    }
-
-    &-socjalicon a{
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-        align-items: center;
-        padding: 30px;
-        margin-bottom: 30px;
-        color: $secondary-color;
-        fill: $secondary-color;
-    }
-    
-}
-
-a img {
-    width: 40px; /* Zmienna wielkość ikony */
-    height: auto;
-    transition: 0.3s ease-in-out;
-  }
-  
-  a:hover img {
-    box-shadow: 0 0 25px $secondary-color,
-                0 0 50px $hover-color,
-                0 0 75px $hover-color;
-    transform: scale(1.1);
-    
-    
-  }
-
-
-.home__image{
-    position: relative; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: red;
-    height: auto;  
-    width: 30%;  
-    margin: 0 auto;
-    width: 50%;
-    z-index: 2;
-    cursor: pointer;
-    
-
-
- & img {
-
-    width: 60%; /* Niech obraz nie przekracza diva */
-    max-height:  60%; /* Niech obraz nie przekracza diva */
-    aspect-ratio: 1/1;
-    object-fit: cover;    
-    
-    border-radius: 50%; /* Zaokrąglony */
-    
-    transition: 0.3s ease-in-out;
-    box-shadow: 0px 0px 20px 10px black;
-   
-
-        &:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px $hover-color;
-            opacity: 1;
-        }
-    }
 }
 
 
