--- a/src/mixins/mixins.scss
+++ b/src/mixins/mixins.scss
@@ -1,24 +1,28 @@
 @mixin button__styles($background-color, $button__text-color, 
-$padding: 10px 20px, $border-radius: 5px, $font-size: 16px, 
+$padding: 10px 20px, $border-radius: 10px, $font-size: 16px, 
 $width: auto, $height: auto) {
     background-color: $background-color;
+
     color: $button__text-color;
     padding: $padding;
     border: 2px solid black;
-    border-radius: 5px;
+    border-radius: $border-radius;
     font-size: $font-size;
     cursor: pointer;
-    transition: $background-color 0.3s ease;
+    transition: $background-color 0.3s ease,color 0.3 ease;
     width: $width; // Dodane
     height: $height; // Dodane
-
-  margin: 10px;
+    margin: 10px;
   
     &:hover {
       background-color: red;
+      color: black;
+      border-radius: $border-radius;
     }
   
     &:active {
-      background-color: yellow;
+      background-color: green;
+      color: grey;
+      border-radius: $border-radius;
     }
   }
