--- a/src/scss/section/navbar.scss
+++ b/src/scss/section/navbar.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     opacity: 0.8;
     top: 0;
     left: 0;
