--- a/src/scss/section/home.scss
+++ b/src/scss/section/home.scss
@@ -58,6 +58,17 @@
         margin-bottom: 30px;
       
      }
+     &-social{
+        color: red;
+        text-align: center;
+        font-size: 2rem;
+        width: 30px;
+        height: 30px;
+        background-color: $background-color;
+        //border: 2px solid black;
+        padding: -2px 3px;
+        border-radius: 50%;
+     }
     }
 
 //Button
