--- a/src/scss/section/navbar.scss
+++ b/src/scss/section/navbar.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    opacity: 0.8;
+    opacity: 1;
     top: 0;
     left: 0;
     width: 80%;
@@ -15,6 +15,17 @@
     background-color: $background-color;
     z-index: 5;
     font-weight: 800;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+
+    &.hidden {
+        transform: translateY(-100%); // Ukrywa navbar poza ekranem
+        opacity: 0;
+    }
+
+    &.visible {
+        transform: translateY(0); // Pokazuje navbar
+        opacity: 1;
+    }
 }
 
 .navbar__container a {
