--- a/src/scss/section/navbar.scss
+++ b/src/scss/section/navbar.scss
@@ -12,6 +12,7 @@
     width: 80%;
     height: 10vh;
     padding: 2rem 12% 2rem 12%;
+    text-decoration: none;
     background-color: $background-color;
     z-index: 5;
     font-weight: 800;
