animation rebranding + hook forlder created

--- a/src/scss/section/home.scss
+++ b/src/scss/section/home.scss
@@ -1,184 +1,128 @@
 @use "../variables" as *;
 @use "../../mixins/mixins.scss" as *;
 
-
-// Home page   Home page   Home page   Home page   Home page 
-
+// Home page container
 .home__container {
     min-height: 100vh;
     padding: 10% 5%;
     display: flex;
     flex-direction: row;
     margin: 3rem 3rem 1rem 1rem;
-    }
+}
 
-.home__content{
+.home__content {
     background-color: $background-color;
     width: 50%;
-    padding: 3rem 3rem 3rem 3rem;
+    padding: 3rem;
     color: $secondary-color;
-    
+    text-align: center;
 
     &-h1 {
         font-weight: 700;
         line-height: 3rem;
-        text-align: center;
-        padding: 5rem;
         font-size: 4rem;
-        text-shadow: 2px 2px 3px rgba(255, 0, 0, 0.3); /* Poprawiony text-shadow */
+        text-shadow: 2px 2px 3px rgba(255, 0, 0, 0.3);
+        transition: transform 0.3s ease-in-out;
 
         &:hover {
             transform: scale(1.02);
-            text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3); /* Dodany box-shadow */
-            transition: box-shadow 0.3s ease-in-out;
+            text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3);
         }
-
     }
 
-    &-animation {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-left: 1rem;
-        font-size: clamp(3rem, 5vw, 3rem);
-    }
-
-    & p {
-       margin: 30px;
-       font-size: 1.2rem;
-
-    }
-
-    &-socjalicon {
-        display: flex;
-        flex-wrap: wrap; /* Pozwoli na złamanie linii, jeśli przyciski są za duże */
-        justify-content: center;           
-        align-items: center;
-        gap: 20px;
-        padding: 30px;
-        margin-bottom: 30px;
-      
-     }
-    &-social{
-        color: red;
-        text-align: center;
-        font-size: 2rem;
-        width: 30px;
-        height: 30px;
-        background-color: $background-color;
-        //border: 2px solid black;
-        padding: -2px 3px;
-        border-radius: 50%;
-     }
-
-     @keyframes words {
-        0% { content: "Web Developer"; }
-        25% { content: "Frontend Developer"; }
-        50% { content: "React Developer"; }
-        75% { content: "JavaScript Enthusiast"; }
-        100% { content: "Web Developer"; }
-      }
-      
-    
-    }
-    .home__content-animation {
-        font-size: 34px;
-        font-weight: 600;
-        min-width: 280px;
-      
-        &:hover {
-          transform: scale(1.02);
-          transition: transform 0.3s ease-in-out;
-        }
-      
-        span {
-          position: relative;
-          width: 100%;
-          background-color: $background-color;
-          color: $secondary-color;
-          transition: background-color 0.3s ease, color 0.3s ease;
-          display: inline-block;
-      
-          &:before {
-            content: "Web Developer"; // ✅ Poprawiona literówka
-            position: absolute;
-            animation: words 20s infinite;
-            background-color: aliceblue;
-          }
-      
-          &:after {
-            content: "";
-            position: absolute;
-            background-color: aliceblue;
-          }
-        }
-      }
-
-   
-
-//Button
-.home__button {
-    display: flex;  // Ustawienie flexboxa
-    justify-content: center; // Wyśrodkowanie w poziomie
-    align-items: center; // Wyśrodkowanie w pionie
-    gap: 20px; // Dodanie odstępu między przyciskami
-    width: 100%; // Wypełnienie dostępnej przestrzeni
-    margin-top: 20px; // Opcjonalny odstęp od góry
+ 
 }
-.home__button-github {
-    @include button__styles(#144804, $background-color, 10px 20px, 20px, 16px, 200px, 50px);
-  }
-
-.home__button-linkedin {
-    @include button__styles($background-color, $secondary-color, 10px 20px, 20px, 16px, 200px, 50px);
-  }
-
-a img {
-    /* Zmienna wielkość ikony */
-    height: auto;
-    transition: 0.3s ease-in-out;
-  }
+.home__content-animation {
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    min-height: 3rem; // Zapobiega skakaniu tekstu
   
-  a:hover img {
-    box-shadow: 0 0 25px $secondary-color,
-                0 0 50px $hover-color,
-                0 0 75px $hover-color;
-    transform: scale(1.05);
-      
+    .fade-text {
+      display: inline-block;
+      color: $secondary-color;
+      font-weight: bold;
+      transition: opacity 0.5s ease-in-out;
+    }
+  
+    .hidden {
+      opacity: 0;
+    }
+  
+    .visible {
+      opacity: 1;
+    }
   }
 
-.home__image{
-    position: relative; 
+// Animacja tekstu
+@keyframes words {
+    0%, 100% { content: "Web Developer"; }
+    25% { content: "Frontend Developer"; }
+    50% { content: "React Developer"; }
+    75% { content: "JavaScript Enthusiast"; }
+}
+
+// Stylizacja ikon społecznościowych
+.home__content-socjalicon {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $background-color;
-    height: auto;  
-    width: 30%;  
-    margin: 0 auto;
+    gap: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+
+.home__content-social {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: transform 0.3s ease-in-out;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+// Przycisk
+.home__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.home__button-github {
+    @include button__styles(#144804, $background-color, 10px 20px, 20px, 16px, 200px, 50px);
+}
+
+.home__button-linkedin {
+    @include button__styles($background-color, $secondary-color, 10px 20px, 20px, 16px, 200px, 50px);
+}
+
+// Stylizacja obrazka profilowego
+.home__image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    z-index: 2;
-    cursor: pointer;
-    
+    position: relative;
 
-
- & img {
-
-    width: 60%; /* Niech obraz nie przekracza diva */
-    max-height:  60%; /* Niech obraz nie przekracza diva */
-    aspect-ratio: 1/1;
-    object-fit: cover;    
-    
-    border-radius: 50%; /* Zaokrąglony */
-    
-    transition: 0.3s ease-in-out;
-    box-shadow: 0px 0px 20px 10px black;
-   
+    img {
+        width: 60%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        border-radius: 50%;
+        transition: transform 0.3s ease-in-out;
+        box-shadow: 0px 0px 20px 10px black;
 
         &:hover {
             transform: scale(1.05);
             box-shadow: 0 0 30px $hover-color;
-            opacity: 1;
         }
     }
 }
-
