--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,11 @@
 @use "./section/home.scss" as *;
 @use "./section/navbar.scss" as *;
 @use "../mixins/mixins.scss" as *;
+@use "./section/education.scss" as *;
+
+// Importing all scss files
+
+
  
 
 
