--- a/src/scss/section/home.scss
+++ b/src/scss/section/home.scss
@@ -97,7 +97,7 @@
 }
 
 .home__button-github {
-    @include button__styles(#144804, $background-color, 10px 20px, 20px, 16px, 200px, 50px);
+    @include button__styles($background-color, $secondary-color, 10px 20px, 20px, 16px, 200px, 50px);
 }
 
 .home__button-linkedin {
