--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,19 @@
+@use "sass:color";
+  
   // Deklaracja zmiennych
 
   $background-color:rgba(46, 79, 55, 1);
   $primary-color: rgb(33, 36, 36);   // kolor główny  #38a3a5
   $secondary-color: rgb(149, 109, 53) ;  // kolor pomocniczy
-  $button__border-color: rgba(188, 71, 73, 1) ; // obramowanie przycisków i articles
+
+  $secondary__darken-color: color.scale($primary-color, $lightness: -5%);
+ 
+
+
+  $button__border-color: rgba(188, 71, 73, 1); // obramowanie przycisków i articles
   $button__border-radius:rgba(188, 71, 73, 1);
   $button__text-color: $background-color;
-  $padding: 20px;
+  
   $shadow-color: rgb(49, 114, 66);
   $click-color: rgba(56, 102, 65, 1); //#386641
 
@@ -31,6 +38,8 @@
   $spacing-small: 0.5rem;
   $spacing-medium: 1rem;
   $spacing-large: 2rem;
+
+  $padding: 20px;
 
   // zaokrąglenia 
  
