--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @use "./section/navbar.scss" as *;
 @use "../mixins/mixins.scss" as *;
 @use "./section/education.scss" as *;
+@use "./section/technologies.scss" as *;
 
 // Importing all scss files
 
