--- a/src/scss/section/home.scss
+++ b/src/scss/section/home.scss
@@ -7,7 +7,7 @@
     padding: 10% 5%;
     display: flex;
     flex-direction: row;
-    margin: 3rem 3rem 1rem 1rem;
+    flex-grow: 1;
 }
 
 .home__content {
@@ -111,6 +111,7 @@
     align-items: center;
     width: 50%;
     position: relative;
+    flex-grow: 1;
 
     img {
         width: 60%;
