--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,14 @@
   
   // Deklaracja zmiennych
 
+  // $background-pattern: 
+  // radial-gradient(black 15%, transparent 16%) 0 0,
+  // radial-gradient(black 15%, transparent 16%) 8px 8px,
+  // radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+  // radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+
+  // $background-size: 16px 16px; // Rozmiar powtarzającego się wzoru
+
   $background-color:rgba(46, 79, 55, 1);
   $primary-color: rgb(33, 36, 36);   // kolor główny  #38a3a5
   $secondary-color: rgb(149, 109, 53) ;  // kolor pomocniczy
