--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @use "../mixins/mixins.scss" as *;
 @use "./section/education.scss" as *;
 @use "./section/technologies.scss" as *;
+@use "./section/project.scss" as *;
 
 // Importing all scss files
 
@@ -14,6 +15,9 @@
 
 
 body {
+        // background: $background-color, $background-pattern;
+        // background-size: $background-size;
+        // background-repeat: repeat;
         background-color: $background-color;
 }
 
