--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @use "../mixins/mixins.scss" as *;
 @use "./section/education.scss" as *;
 @use "./section/technologies.scss" as *;
-@use "./section/project.scss" as *;
+@use "./section/itproject.scss" as *;
 
 // Importing all scss files
 
