--- a/src/scss/section/itproject.scss
+++ b/src/scss/section/itproject.scss
@@ -1,3 +1,47 @@
 @use "../variables" as *;
 @use "sass:color";
 
+@use "../variables" as *;
+//@use "scss:colors" ;
+
+.itproject{
+    padding: 10px 15px;
+    //background-color: $background-color;
+    color: $secondary-color;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    margin-top: 20px;
+}
+
+.itproject__container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: $background-color;
+    color: $secondary-color;
+    
+}
+
+.itproject__container-box{
+    background-color: $background-color;
+    
+    padding: 20px;
+    margin: 10px;
+    border: 3px solid rgba(17, 12, 12, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+     
+    transition: $background-color 0.3s ease, color 0.3 ease;
+    
+    &:hover {
+        
+        color: $hover-color;
+        box-shadow: 0 0 50px $hover-color;
+    }
+
+}
+
+.itproject__container-box img {
+    width: 300px;
+    height: auto;
+    border: 2px solid red; /* Tymczasowe style do debugowania */
+  }
