--- a/src/scss/section/itproject.scss
+++ b/src/scss/section/itproject.scss
@@ -23,7 +23,6 @@
 
 .itproject__container-box{
     background-color: $background-color;
-    
     padding: 20px;
     margin: 10px;
     border: 3px solid rgba(17, 12, 12, 0.9);
@@ -43,5 +42,5 @@
 .itproject__container-box img {
     width: 300px;
     height: auto;
-    border: 2px solid red; /* Tymczasowe style do debugowania */
+    //border: 2px solid red; /* Tymczasowe style do debugowania */
   }
