--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @use "./section/education.scss" as *;
 @use "./section/technologies.scss" as *;
 @use "./section/itproject.scss" as *;
+@use "./section/contact.scss" as *;
 
 // Importing all scss files
 
